tests/valid/number_auto_cast.fl
main :: proc () {
  uint8: u8 = 123;
  int32: i32 = 123;
  int64: i64 = 123;

  float32: f32 = 123.123;
  float32 = 123;

  float64: f64 = 123;
  float64 = 123.123;
}
