tests/invalid/nested_proc_scopes.fl
main :: proc () {
  a := 123;

  other_proc :: proc () {
    a = 321;
    b := a;
  }
}
